# getconf

./: getconf.cabal
src/System/: GetConf.hs
src/System/GetConf/: FromData.hs  SimpleIni.hs  Test.hs
