name: getconf
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: LICENSE
copyright:
maintainer: p.balzarek@googlemail.com
build-depends: MissingH >=1.1.0.0, base >=4 && <5,
               containers -any, directory -any, mtl >=2.0.0.0,
               parsec >=3.1.0, filepath -any
stability:
homepage:
package-url:
bug-reports:
synopsis: GetOpt style executable configuration
description:  
             .
             .
             .
             .
category: System
author: Philipp Balzarek
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: System.GetConf System.GetConf.SimpleIni
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: